--- a/src/views/frontend/LoginArtesa/src/App.scss
+++ b/src/views/frontend/LoginArtesa/src/App.scss
@@ -10,26 +10,26 @@
 // Setup default styling
 
 :root {
-    --primary-color: #f9f9f9;
-    --hover-color: #f1f1f1;
-    --palegreen-color: #f4ff5b;
-    --whiteColor: #fff;
-    --blackColor: #000;
+    --primary-color: #687e8d;
+    --secondary-color: #f6db8e;
+    --hover-color: #f6db8e;
+    --accent-color: #f6754e;
+    --whiteColor: #ffffff;
+    --blackColor: #000000;
     --greyText: #808080;
-    --bgColor: hsl(113, 11%, 85%);
-    --inputColor: hsl(300, 12%, 97%);
-    //--inputColor: hsl(154, 14%, 90%);
-
-    /* Font Sizes */
+    --bgColor: #687e8d;
+    --inputColor: #f6db8e;
+    --buttonColor: #f6754e;
+  
+    // Tamaños de fuente
     --biggestFontSize: 2.5rem;
     --h1FontSize: 1.5rem;
     --h2FontSize: 1.25rem;
-    --h3FontSize: 1rem;
+    --h3FontSize: 1rem; 
     --normalFontSize: 0.938rem;
     --smallFontSize: 0.813rem;
     --smallestFontSize: 0.75rem;
-    
-}
+  }
 
 .flex{
     display: flex;
@@ -73,18 +73,21 @@ img, video{
     display: block;
     color: var(--whiteColor);
     padding: 10px;
-    background: rgb(243, 15, 26);
+    background: var(--hover-color);
     border-radius: 3px;
     text-align: center;
 }
 
 .btn{
+    background: var(--buttonColor);
     border: none;
     outline: none;
     cursor: pointer;
     border-radius: 8px;
+    transition: .3s ease;
     padding: .8rem 1rem;
-    color: var(--greyText);
+    font-weight: 600;
+    color: var(--whiteColor);
 }
 
 .btn .icon{
@@ -92,12 +95,33 @@ img, video{
 }
 
 .btn:hover{
-    color: var(--primary-color);
-    background: var(--palegreen-color);
+    color: var(--hover-color);
+    background: var(--whiteColor);
+}
+
+.error-message {
+    background-color: rgba(255, 0, 0, 0.1); /* Fondo rojo claro */
+    color: red;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+.success-message {
+  color: #ffffff; /* Blanco para buen contraste */
+  background-color: #f6754e; /* Azul institucional */
+  padding: 6px;
+  border-radius: 2px;
+  font-weight: bold;
+  text-align: center;
+  border: 2px solid #687e8d; /* Borde naranja terracota */
 }
 
 //Pages stylings
-.LoginPage, .RegisterPage {
+.LoginPage, .RegisterPage, .ResetPasswordPage{
+    background: var(--bgColor);
+    color: var(--whiteColor);
     height: 100vh;
     width: 100%;
     margin: auto;
@@ -142,11 +166,14 @@ img, video{
             }
             .textDiv{
                 position: relative;
+                
+                
 
                 .title{
-                    color: var(--whiteColor);
+                    color: var(--accent-color);
                     font-size: 35px;
                     font-weight: 800;
+                    align-items: flex-end;
                 }
                 p{
                     color: var(--whiteColor);
@@ -170,12 +197,16 @@ img, video{
             }
 
             .btn{
-                background: var(--whiteColor);
-                color: var(--primary-color);
-                padding: .8rem 1.5rem;
-                border-radius: 10px;
-                font-weight: 400;
+                background: var(--buttonColor);
+                border: none;
+                outline: none;
+                cursor: pointer;
+                border-radius: 8px;
                 transition: .3s ease;
+                padding: .8rem 1rem;
+                font-weight: 600;
+                color: var(--whiteColor);
+            
 
                 &:hover{
                     background: var(--hover-color);
@@ -198,7 +229,7 @@ img, video{
                     padding-bottom: .5rem;
 
                         img{
-                            width: 60px;
+                            width: 100px;
                             padding-bottom: .5rem;
                         }
 
@@ -220,6 +251,7 @@ img, video{
 
                                 input{
                                     background: var(--inputColor);
+                                    color: var(--blackColor);
                                     outline: none;
                                     border: none;
                                     width: 250px;
@@ -237,13 +269,14 @@ img, video{
                                     gap: .5rem;
                                     padding: 1rem;
                                     background: var(--inputColor);
+                                    color: var(--blackColor);
                                     border-radius: 10px;
                                 }
                             }
 
                             .btn{
                                 padding: .8rem;
-                                background: var(--greyText);
+                                background: var(--buttonColor);
                                 border-radius: 10px;
                                 color: var(--whiteColor);
                                 align-items: center;
@@ -259,8 +292,8 @@ img, video{
                                 }
 
                                 &:hover{
-                                    background: var(--blackColor);
-                                    color: var(--whiteColor);
+                                    background: var(--hover-color);
+                                    color: var(--blackColor);
 
                                     .icon{
                                         color: var(--blackColor);
@@ -285,3 +318,142 @@ img, video{
                         }
             }
     }
+
+/* ========== Sidebar ========== */
+.sidebar {
+    width: 60px;  // Inicialmente colapsado
+    min-height: calc(100vh - 60px);
+    background-color: var(--bgColor);
+    color: var(--whiteColor);
+    transition: width 0.3s ease-in-out;
+    position: fixed;
+    left: 0;
+    top: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+  
+    &:hover {
+      width: 200px;  // Se expande al hacer hover
+    }
+  
+    .toggle-btn {
+      position: absolute;
+      top: 20px;
+      right: -20px;
+      width: 35px;
+      height: 35px;
+      background-color: var(--bgColor);
+      border: 2px solid var(--whiteColor);
+      color: var(--whiteColor);
+      cursor: pointer;
+      padding: 5px;
+      border-radius: 50%;
+      transition: all 0.3s ease-in-out;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  
+      &:hover {
+        background: var(--hoverButton);
+        color: var(--blackColor);
+      }
+
+      &:hover .toggle-btn {
+        right: -15px; // Lo ajusta cuando está expandido
+      }
+    }
+  
+    .sidebar-menu {
+      padding: 20px;
+  
+      h3 {
+        font-size: 1rem;
+        margin-bottom: 20px;
+      }
+  
+      ul {
+        list-style: none;
+        padding: 0;
+  
+        li {
+          margin-bottom: 10px;
+  
+          button {
+            background: none;
+            border: none;
+            color: var(--whiteColor);
+            font-size: 0; /* Ocultar el texto cuando está colapsado */
+            width: 100%;
+            text-align: left;
+            padding: 12px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease-in-out, font-size 0.3s ease-in-out;
+  
+            &:hover {
+              background: var(--hoverButton);
+              color: var(--blackColor);
+            }
+          }
+        }
+      }
+    }
+  
+    &:hover .sidebar-menu ul li button {
+      font-size: 0.938rem; /* Mostrar texto cuando el sidebar está expandido */
+    }
+  }
+
+  /* ========== Dashboard styles ========== */
+  .dashboard {
+    display: flex;
+    flex-direction: column;
+    height: 100vh; // Ocupar toda la pantalla
+  
+    .top-section {
+      position: fixed; // Fija en la parte superior
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      background-color: #2c3e50;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      z-index: 1000; // Sobre otros elementos
+  
+      h1 {
+        color: white;
+        font-size: 20px;
+      }
+    }
+  
+    .dashboard-layout {
+      display: flex;
+      transition: margin-left 0.3s ease-in-out;
+      flex-direction: row;
+      width: 100%;
+      height: calc(100vh - 60px); // Restamos la altura del TOP
+      margin-top: 60px; // Evitamos que se sobreponga con el TOP
+    }
+  
+    .dashboard-content {
+      flex-grow: 1;
+      margin-left: 200px;
+      background: white;
+      border-radius: 20px;
+      padding: 20px;
+      transition: margin-left 0.3s ease-in-out;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    }
+    }
+
+    /* Expandir el contenido cuando el sidebar está expandido */
+.sidebar:hover ~ .dashboard-layout {
+    margin-left: 200px;
+  }
