Se genera actualizacion Front con nuevos componentes y paginas de redireccion

--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/Pages/Orders/Orders.css
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/Pages/Orders/Orders.css
@@ -52,4 +52,4 @@
 }
 .order-form button:hover {
   background-color: #16a085;
-}/*# sourceMappingURL=OrderForm.css.map */
+}/*# sourceMappingURL=Orders.css.map */
