--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/Dashboard.css
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/Dashboard.css
@@ -31,7 +31,7 @@
 .dashboard .dashboard-content {
   flex-grow: 1;
   margin-left: 200px;
-  background: white;
+  background: rgb(243, 84, 84);
   border-radius: 20px;
   padding: 40px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
