Sincronizando ultimos cambios antes de cambiar a Master Branch

--- a/src/views/frontend/LoginArtesa/src/App.scss
+++ b/src/views/frontend/LoginArtesa/src/App.scss
@@ -186,7 +186,7 @@ img, video{
                 bottom: 10px;
                 padding: 0 1rem;
                 height: 60px;
-                background: rgba(255, 255, 255, 0.248);
+                background: #2c3e508c;
                 left: 0;
                 right: 0;
                 justify-content: space-between;
