--- a/src/views/frontend/LoginArtesa/src/App.css
+++ b/src/views/frontend/LoginArtesa/src/App.css
@@ -178,7 +178,7 @@ img, video {
   bottom: 10px;
   padding: 0 1rem;
   height: 60px;
-  background: rgba(255, 255, 255, 0.248);
+  background: rgba(44, 62, 80, 0.5490196078);
   left: 0;
   right: 0;
   justify-content: space-between;
