--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/Body Section/TopSection/top.scss
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/Body Section/TopSection/top.scss
@@ -27,6 +27,13 @@
       color: white;
       display: flex;
       align-items: center;
+      gap: 8px;
+      
+      .username {
+        font-size: 16px;
+        font-weight: 500;
+        color: white;
+      }
     }
 
     .user-menu {
