--- a/src/views/frontend/LoginArtesa/src/App.scss
+++ b/src/views/frontend/LoginArtesa/src/App.scss
@@ -569,27 +569,33 @@ label {
       button {
         padding: 12px 24px;
         border-radius: 6px;
-        font-weight: 500;
+        font-weight: 600;
         cursor: pointer;
         transition: all 0.3s ease;
         border: none;
       }
       
       .cancel-btn {
-        background-color: var(--greyText);
-        color: var(--whiteColor);
+        background-color: $primary-color;
+        color: $text-color;
+        text-transform: uppercase;
+        border: 1px solid transparent;
         
         &:hover {
-          background-color: #666666; // ~10% más oscuro que #808080
+          background-color: #666666;
+          border-color: #666666; // ~10% más oscuro que #808080
         }
       }
       
       .submit-btn {
-        background-color: var(--palegreen-color);
-        color: var(--blackColor);
+        background-color: $accent-color;
+        color: $background-dark;
+        text-transform: uppercase;
+        border: 1px solid transparent;
         
         &:hover {
-          background-color: #daeb35; // ~10% más oscuro que #f4ff5b
+          background-color: $secondary-color;
+          border-color: $background-dark; // ~10% más oscuro que #f4ff5b
         }
         
         &:disabled {
