--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/Body Section/TopSection/top.css
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/Body Section/TopSection/top.css
@@ -57,4 +57,4 @@
 }
 .top-section .user-container .user-menu button:hover {
   background-color: var(--hover-color);
-}/*# sourceMappingURL=top.css.map */
+}
