--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/SidebarSection/sidebar.scss
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/SidebarSection/sidebar.scss
@@ -34,75 +34,95 @@
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.2);
+  padding: 1rem 0;
+  z-index: 1000;
 
   &.collapsed {
     width: 60px;
 
-    .sidebar-menu h3 {
+    .menuTitle, .settingsTitle, .smallText {
       display: none;
     }
 
-    .sidebar-menu ul li button {
+    .logoDiv img {
+      width: 40px;
+      height: 40px;
+      object-fit: contain;
+    }
+
+    .menuLink {
       justify-content: center;
-      font-size: 0;
-    }
-
-    .toggle-btn {
-      left: 15px;
-    }
-
-  }
-
-  .toggle-btn {
-    position: absolute;
-    top: 10px;
-    right: -15px;
-    background-color: #34495e;
-    border: none;
-    color: var(--whiteColor);
-    cursor: pointer;
-    padding: 8px;
-    border-radius: 50%;
-    transition: background 0.3s ease-in-out;
-
-    &:hover {
-      background: var(--hoverButton);
     }
   }
 
-  .sidebar-menu {
-    padding: 20px;
+  .logoDiv {
+    padding: 0 1rem;
+    margin-bottom: 1rem;
+    justify-content: center;
 
-    h3 {
+    img {
+      width: 120px;
+      height: 60px;
+      object-fit: contain;
+      transition: all 0.3s ease;
+    }
+  }
+
+  .menuDiv, .settingsDiv {
+    padding: 0 1rem;
+
+    .menuTitle, .settingsTitle {
       font-size: var(--h3FontSize);
-      margin-bottom: 20px;
+      font-weight: 500;
+      margin-bottom: 1rem;
+      color: var(--secondary-color);
     }
 
-    ul {
-      list-style: none;
-      padding: 0;
+    .menuList {
+      display: grid;
+      row-gap: 0.5rem;
 
-      li {
-        margin-bottom: 10px;
-
-        button {
-          background: none;
+      .listItem {
+        .menuLink {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+          padding: 0.8rem 1rem;
+          border-radius: 0.5rem;
+          background: transparent;
+          transition: all 0.3s ease;
+          cursor: pointer;
           border: none;
           color: var(--whiteColor);
-          font-size: var(--normalFontSize);
           width: 100%;
           text-align: left;
-          padding: 12px 15px;
-          border-radius: 5px;
-          cursor: pointer;
-          transition: background 0.3s ease-in-out;
 
           &:hover {
-            background: var(--hoverButton);
+            background-color: var(--hoverButton);
             color: var(--blackColor);
+            
+            .icon {
+              color: var(--blackColor);
+            }
+          }
+
+          .icon {
+            color: var(--whiteColor);
+            font-size: 1.2rem;
+            transition: all 0.3s ease;
+          }
+
+          .smallText {
+            font-size: var(--smallFontSize);
+            display: block;
+            font-weight: 500;
           }
         }
       }
     }
+  }
+
+  .settingsDiv {
+    margin-top: 1rem;
   }
 }
