--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/ClientProfile/ClientProfile.scss
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/ClientProfile/ClientProfile.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 :root {
   --primary-color: #687e8d;
   --secondary-color: #f6db8e;
@@ -237,7 +238,7 @@
     color: var(--whiteColor);
     
     &:hover {
-      background-color: darken(#f6754e, 10%);
+      background-color: color.adjust(#f6754e, $lightness: -10%);
     }
     
     &:disabled {
