--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/ClientProfile/ConfirmationModal.scss
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/ClientProfile/ConfirmationModal.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 /* Estilos para el Modal de Confirmación */
 .confirmation-modal-overlay {
     position: fixed;
@@ -102,7 +103,7 @@
         color: white;
         
         &:hover {
-          background-color: darken(#f6754e, 10%);
+          color: color.adjust(#f6754e, $lightness: -10%);
         }
       }
       
@@ -111,7 +112,7 @@
         color: white;
         
         &:hover {
-          background-color: darken(#d32f2f, 10%);
+          color: color.adjust(#f6754e, $lightness: -10%);
         }
       }
     }
